--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -16,40 +16,13 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
-      <div class="box box-1">
-
+    <div class="box-master">
+      <div class="box-row" id="box1"></div>
+      <div class="box-row">
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
       </div>
-
-      <div class="box box-2">
-        <div class="box box-2-1">
-
-        </div>
-        <div class="box box-2-2">
-
-        </div>
-      </div>
-
-      <div class="box box-3">
-        <div class="box box-3-1">
-
-        </div>
-        <div class="box box-3-2">
-
-        </div>
-        <div class="box box-3-3">
-
-        </div>
-        <div class="box box-3-4">
-
-        </div>
-      </div>
-
-      <div class="box box-4">
-        <div class="box box-4-1">
-
-        </div>
-      </div>
+      <div class="box-row"></div>
     </div>
   </body>
 </html>
