Adicionado as linhas 3 e 4

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -17,12 +17,22 @@
       </nav>
     </header>
     <div class="box-master">
-      <div class="box-row" id="box1"></div>
+      <div class="box-row box" id="box1"></div>
       <div class="box-row">
         <div class="box" id="box2"></div>
         <div class="box" id="box3"></div>
       </div>
-      <div class="box-row"></div>
+      <div class="box-row">
+        <div class="box" id="box4"></div>
+        <div class="box" id="box5"></div>
+        <div class="box" id="box6"></div>
+        <div class="box" id="box7"></div>
+      </div>
+      <div class="box-row">
+        <div class="box" id="box8"></div>
+        <div class="box" id="box9"></div>
+        <div class="box" id="box10"></div>
+      </div>
     </div>
   </body>
 </html>
