--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -34,5 +34,17 @@
         <div class="box" id="box10"></div>
       </div>
     </div>
+    <div class="box-master">
+      <div class="box-row">
+        <div class="box" id="box11"></div>
+        <div class="box" id="box12"></div>
+      </div>
+      <div class="box-row">
+        <div class="box" id="box13"></div>
+        <div class="box" id="box14"></div>
+        <div class="box" id="box15"></div>
+      </div>
+      <div class="box-row box" id="box16"></div>
+    </div>
   </body>
 </html>
