Adicionado as últimas linhas e pequenas alterações na index e cores nas páginas

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
          </ul>
        </nav>
      </header>
+     <footer>
+       <h4>By: Gabriel Henrique</h3>
+     </footer>
    </body>
 </html>
