--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -46,5 +46,40 @@
       </div>
       <div class="box-row box" id="box16"></div>
     </div>
+    <div class="box-master">
+      <div class="box-row">
+        <div class="box" id="box17"></div>
+        <div class="box" id="box18"></div>
+      </div>
+      <div class="box-row box" id="box19"></div>
+      <div class="box-row">
+        <div class="box" id="box20"></div>
+        <div class="box-grid" id="box21">
+          <div class="box-row-fill" id="fill-1">
+            <div class="box" id="box22"></div>
+            <div class="box" id="box23"></div>
+          </div>
+          <div class="box-row-fill" id="fill-2">
+            <div class="box" id="box24"></div>
+            <div class="box" id="box25"></div>
+          </div>
+        </div>
+      </div>
+      <div class="box-row box" id="box26"></div>
+      <div class="box-row">
+        <div class="box-grid" id="box27">
+          <div class="box-row-fill" id="fill-3">
+            <div class="box" id="box28"></div>
+            <div class="box" id="box29"></div>
+          </div>
+          <div class="box-row-fill" id="fill-4">
+            <div class="box" id="box30"></div>
+            <div class="box" id="box31"></div>
+          </div>
+        </div>
+        <div class="box" id="box32"></div>
+      </div>
+      <div class="box-row box" id="box33"></div>
+    </div>
   </body>
 </html>
