--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
+      <h1>Exercício 1</h1>
       <nav>
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="exer-01-flex.html">Exercicio 1</a></li>
         </ul>
       </nav>
     </header>
