--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
    </head>
    <body>
      <header>
+       <h1>Exercícios Flex-box</h1>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exer-01-flex.html">Exercício 1</a></li>
          </ul>
        </nav>
      </header>
