criei 4 divs para os boxs

--- a/exercicio1.html
+++ b/exercicio1.html
@@ -19,6 +19,10 @@
    </header>
 
    <div id="container">
+     <div class="box box-1"></div>
+     <div class="box box-2"></div>
+     <div class="box box-3"></div>
+     <div class="box box-4"></div>
 
    </div>
 
