--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -17,6 +17,12 @@
      </header>
      <h1>exer-01-flex</h1>
      <div class="container">
+       <div class="box box-01">
+       <div class="box box-02">
+       <div class="box box-03">
+       <div class="box box-04">
+
+       </div>
 
      </div>
    </body>
