--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="../css/style-base.css">
+     <link rel="stylesheet" href="exerc-flexbox.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -15,5 +16,9 @@
          </ul>
        </nav>
      </header>
+
+     <section id="container-pai">
+       
+     </section>
    </body>
 </html>
