--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
          </ul>
        </nav>
      </header>
+     <h1>Exercicio flex</h1>
+     <div class="container">
+       <div class="flex box-1"></div>
+       <div class="flex box-2"></div>
+       <div class="flex box-3"></div>
+       <div class="flex box-4"></div>
+     </div>
    </body>
 </html>
