--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -4,11 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style-base.css">
+    <link rel="stylesheet" href="css/exer-01-flex.css">
     <title></title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="exer-01-flex.html">Exercicio 1</a></li>
+        </ul>
+      </nav>
+    </header>
     <div class="container">
+      <div class="box box-1">
 
+      </div>
+
+      <div class="box box-2">
+
+      </div>
+
+      <div class="box box-3">
+
+      </div>
+
+      <div class="box box-4">
+
+      </div>
     </div>
   </body>
 </html>
