--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -3,8 +3,8 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
-   <link rel="stylesheet" href="./css/style-base.css">
-   <link rel="stylesheet" href="./css/exer-01-flex.css">
+   <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+   <link rel="stylesheet" href="./css/exer-01-flex.css" type="text/css">
    <title>EXERCÍCIO 1</title>
  </head>
  <body>
@@ -18,12 +18,11 @@
      </nav>
    </header>
 
-   <div id="container">
+   <div class="container">
      <div class="box box-1"></div>
      <div class="box box-2"></div>
      <div class="box box-3"></div>
      <div class="box box-4"></div>
-
    </div>
 
  </body>
