--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
      <h1>Exercício - 1</h1>
      <div class="container">
        <div class="box box-1"></div>
-       <div class="box box-2"></div>
+       <div class="box box-2">
+       </div>
        <div class="box box-3"></div>
        <div class="box box-4"></div>
      </div>
