--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
+   <link rel="stylesheet" href="./css/style-base.css">
    <link rel="stylesheet" href="./css/exer-01-flex.css">
    <title>EXERCÍCIOS-FLEXBOX</title>
  </head>
@@ -19,10 +20,10 @@
      <h1> Exercício 01 </h1>
 
      <div class = "container">
-       <div class = "box box-1">    </div>
-       <div class = "box box-2">    </div>
-       <div class = "box box-3">    </div>
-       <div class = "box box-4">    </div>
+       <div class = "box box-1">  </div>
+       <div class = "box box-2">  </div>
+       <div class = "box box-3">  </div>
+       <div class = "box box-4">  </div>
      </div>
 
 
