--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -20,7 +20,12 @@
 
    <div class="container">
      <div class="box box-1"></div>
-     <div class="box box-2"></div>
+
+     <div class="box box-2">
+       <div class="box box-5"></div>
+       <div class="box box-6"></div>
+     </div>
+
      <div class="box box-3"></div>
      <div class="box box-4"></div>
    </div>
