--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          </ul>
        </nav>
      </header>
-     <h1>Exercicio flex</h1>
+     <h1>Exercicio flex-box-1</h1>
      <div class="container">
        <div class="flex box-1"></div>
        <div class="flex box-2"></div>
