adicionei boxs no 3° e 4° box

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -26,8 +26,19 @@
        <div class="box box-6"></div>
      </div>
 
-     <div class="box box-3"></div>
-     <div class="box box-4"></div>
+     <div class="box box-3">
+       <div class="box box-7"></div>
+       <div class="box box-7"></div>
+       <div class="box box-7"></div>
+       <div class="box box-7"></div>
+     </div>
+
+     <div class="box box-4">
+       <div class="box box-8"></div>
+       <div class="box box-8"></div>
+       <div class="box box-8"></div>
+
+     </div>
    </div>
 
  </body>
