--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -22,7 +22,12 @@
       </div>
 
       <div class="box box-2">
+        <div class="box box-2-1">
 
+        </div>
+        <div class="box box-2-2">
+
+        </div>
       </div>
 
       <div class="box box-3">
