arrumando umas coisas q fiz errado kk mais deu certo,, e tamo ai seguindo o prof

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="./css/exer-01-flex.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -17,10 +18,10 @@
      </header>
      <h1>Exercicio flex-box-1</h1>
      <div class="container">
-       <div class="flex box-1"></div>
-       <div class="flex box-2"></div>
-       <div class="flex box-3"></div>
-       <div class="flex box-4"></div>
+       <div class="box box-1"></div>
+       <div class="box box-2"></div>
+       <div class="box box-3"></div>
+       <div class="box box-4"></div>
      </div>
    </body>
 </html>
