Boxes filhos até box-3.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exer-01-flex.html">Exercício 1</a></li>
          </ul>
        </nav>
      </header>
-     <h1>Exercício - 1</h1>
+     <h1>Exercício 1</h1>
      <div class="container">
        <div class="box box-1"></div>
        <div class="box box-2">
+         <div class="box box-5"></div>
+         <div class="box box-6"></div>
        </div>
-       <div class="box box-3"></div>
-       <div class="box box-4"></div>
+       <div class="box box-3">
+         <div class="box box-7"></div>
+         <div class="box box-8"></div>
+         <div class="box box-9"></div>
+         <div class="box box-10"></div>
+       </div>
+       <div class="box box-4">
+         <div class="box box-11"></div>
+       </div>
      </div>
    </body>
 </html>
