--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -31,11 +31,24 @@
       </div>
 
       <div class="box box-3">
+        <div class="box box-3-1">
 
+        </div>
+        <div class="box box-3-2">
+
+        </div>
+        <div class="box box-3-3">
+
+        </div>
+        <div class="box box-3-4">
+
+        </div>
       </div>
 
       <div class="box box-4">
+        <div class="box box-4-1">
 
+        </div>
       </div>
     </div>
   </body>
