adicionando flebox dentro da div container

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="../css/style-base.css">
-     <link rel="stylesheet" href="exerc-flexbox.css">
+     <link rel="stylesheet" href="../css/exerc-flexbox.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -17,8 +17,19 @@
        </nav>
      </header>
 
-     <section id="container-pai">
-       
+     <section class="container-pai">
+       <div class="box flexbox-item1"></div>
+       <div class="box flexbox-item2">
+         <div id="item2-filho"></div>
+         <div id="item2-filho1"></div>
+       </div>
+       <div class="box flexbox-item3">
+         <div id="item3-filho"></div>
+         <div id="item3-filho"></div>
+         <div id="item3-filho"></div>
+         <div id="item3-filho"></div>
+       </div>
+       <div class="box flexbox-item4"></div>
      </section>
    </body>
 </html>
