Nascem os primeiros netos do div container

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -20,15 +20,32 @@
      <h1> Exercício 01 </h1>
 
      <div class = "container">
+
        <div class = "box box-1">  </div>
-       <div class = "box box-2">  </div>
-       <div class = "box box-3">  </div>
-       <div class = "box box-4">  </div>
+
+
+       <div class = "box box-2">
+
+         <div class="box-2 box-filho2"> </div>
+         <div class="box-2 box-filho21"> </div>
+
+       </div>
+
+       <div class = "box box-3">
+
+         <div class="box-3 box-filho3"> </div>
+         <div class="box-3 box-filho31"> </div>
+         <div class="box-3 box-filho32"> </div>
+         <div class="box-3 box-filho33"> </div>
+
+       </div>
+
+        <div class="box-4 box-filho4">
+
+          <div class = "box box-4">  </div>
+
+        </div>
      </div>
-
-
-
-
 
  </body>
 </html>
