aleluia consegui colocar as linhas pelo css kkk

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+     <link rel="stylesheet" href="./css/exerc-01.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -15,15 +16,12 @@
          </ul>
        </nav>
      </header>
-     <h1>exer-01-flex</h1>
-     <div class="container">
-       <div class="box box-01">
-       <div class="box box-02">
-       <div class="box box-03">
-       <div class="box box-04">
-
-       </div>
-
-     </div>
+     <h1>Exercicio 1</h1>
+      <div class="container">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+        <div class="box box-4"></div>
+      </div>
    </body>
 </html>
