--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="/css/exer-01-flex.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
