Personalizando elementos filhos

--- a/html/index.html
+++ b/html/index.html
@@ -20,14 +20,14 @@
      <section class="container-pai">
        <div class="box flexbox-item1"></div>
        <div class="box flexbox-item2">
-         <div id="item2-filho"></div>
-         <div id="item2-filho1"></div>
+         <div class="item2-filho"></div>
+         <div class="item2-filho1"></div>
        </div>
        <div class="box flexbox-item3">
-         <div id="item3-filho"></div>
-         <div id="item3-filho"></div>
-         <div id="item3-filho"></div>
-         <div id="item3-filho"></div>
+         <div class="item3-filho"></div>
+         <div class="item3-filho"></div>
+         <div class="item3-filho"></div>
+         <div class="item3-filho"></div>
        </div>
        <div class="box flexbox-item4"></div>
      </section>
