Adicionando elemento filho do item 4

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,10 @@
          <div class="item3-filho"></div>
          <div class="item3-filho"></div>
        </div>
-       <div class="box flexbox-item4"></div>
+       <div class="box flexbox-item4">
+         <div class="item4-filho" ></div>
+         <div class="item4-filhos" ></div>
+       </div>
      </section>
    </body>
 </html>
