personalizando elemento do item 4

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
        </div>
        <div class="box flexbox-item4">
          <div class="item4-filho" ></div>
-         <div class="item4-filhos" ></div>
+         <div class="item4-filho1" ></div>
        </div>
      </section>
    </body>
