--- a/exer-01.html
+++ b/exer-01.html
@@ -17,5 +17,26 @@
          </ul>
        </nav>
      </header>
+     <h1>Exercício 1</h1>
+     <div class="container">
+       <div class="box box-1"></div>
+       <div class="box box-2">
+         <div class="box box-5"></div>
+         <div class="box box-6"></div>
+       </div>
+       <div class="box box-3">
+         <div class="box box-7"></div>
+         <div class="box box-8"></div>
+         <div class="box box-9"></div>
+         <div class="box box-10"></div>
+       </div>
+       <div class="box box-4">
+         <div class="box box-11"></div>
+       </div>
+
+       <div class="box box-12">
+
+       </div>
+     </div>
    </body>
 </html>
