--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="./css/exer-01-flex.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
-     <header>
-       <nav>
-         <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
-         </ul>
-       </nav>
-     </header>
+       <header>
+         <nav>
+           <ul>
+             <li><a href="index.html">Início</a></li>
+             <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           </ul>
+         </nav>
+       </header>
+
+       <h1>Exercício - 1</h1>
+
+       <div class='container'>
+         <div class="box box-1"></div>
+         <div class="box box-2">
+           <div class="box-2-f1"></div>
+           <div class="box-2-f2"></div>
+         </div>
+         <div class="box box-3"></div>
+         <div class="box box-4"></div>
+       </div>
    </body>
 </html>
