Criando arquivo para o exercicio1

--- a/html/index.html
+++ b/html/index.html
@@ -12,27 +12,8 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exercicio1.html">Exercício-1</a></li>
          </ul>
        </nav>
      </header>
 
-     <section class="container-pai">
-       <div class="box flexbox-item1"></div>
-       <div class="box flexbox-item2">
-         <div class="item2-filho"></div>
-         <div class="item2-filho1"></div>
-       </div>
-       <div class="box flexbox-item3">
-         <div class="item3-filho"></div>
-         <div class="item3-filho"></div>
-         <div class="item3-filho"></div>
-         <div class="item3-filho"></div>
-       </div>
-       <div class="box flexbox-item4">
-         <div class="item4-filho" ></div>
-         <div class="item4-filho1" ></div>
-       </div>
-     </section>
-   </body>
-</html>
