--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
      <h1>Exercicio flex-box-1</h1>
      <div class="container">
        <div class="box box-1"></div>
-       <div class="box box-2"></div>
+       <div class="box box-2">
+         <div class="box-5"></div>
+
+         </div>
+       </div>
        <div class="box box-3"></div>
        <div class="box box-4"></div>
      </div>
