feito a primeira div filha

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -19,7 +19,10 @@
      <h1>Exercicio 1</h1>
       <div class="container">
         <div class="box box-1"></div>
-        <div class="box box-2"></div>
+        <div class="box box-2">
+          <div class="box-5"></div>
+          <div class="box-6"></div>
+        </div>
         <div class="box box-3"></div>
         <div class="box box-4"></div>
       </div>
