Final, foi formada uma cria de divs

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -40,12 +40,13 @@
 
        </div>
 
-        <div class="box-4 box-filho4">
+       <div class = "box box-4">
 
-          <div class = "box box-4">  </div>
+         <div class="box-4 box-filho4"></div>
+         <div class="box-4 box-filho41"></div>
+         <div class="box-4 box-filho42"></div>
 
-        </div>
-     </div>
+       </div>
 
  </body>
 </html>
