--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -23,7 +23,12 @@
           <div class="box-5"></div>
           <div class="box-6"></div>
         </div>
-        <div class="box box-3"></div>
+        <div class="box box-3">
+          <div class="box-7"></div>
+          <div class="box-8"></div>
+          <div class="box-9"></div>
+          <div class="box-10"></div>
+        </div>
         <div class="box box-4"></div>
       </div>
    </body>
