--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
            <div class="box-2-f1"></div>
            <div class="box-2-f2"></div>
          </div>
-         <div class="box box-3"></div>
-         <div class="box box-4"></div>
+         <div class="box box-3">
+           <div class="box-3-f"></div>
+           <div class="box-3-f"></div>
+           <div class="box-3-f"></div>
+           <div class="box-3-f"></div>
+         </div>
+         <div class="box box-4">
+           <div class="box-4-f"></div>
+         </div>
        </div>
    </body>
 </html>
