seguindo dicas ainda k

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
      <div class="container">
        <div class="box box-1"></div>
        <div class="box box-2">
-         <div class="box-5"></div>
+         <div class="box-new cai-1"></div>
+         <div class="box-new cai-2"></div>
 
-         </div>
        </div>
        <div class="box box-3"></div>
        <div class="box box-4"></div>
