--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -29,7 +29,10 @@
           <div class="box-9"></div>
           <div class="box-10"></div>
         </div>
-        <div class="box box-4"></div>
+        <div class="box box-4">
+          <div class="box-11"></div>
+          <div class="box-12"></div>
+        </div>
       </div>
    </body>
 </html>
