--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
        <div class="box box-2">
          <div class="box-new cai-1"></div>
          <div class="box-new cai-2"></div>
-
        </div>
-       <div class="box box-3"></div>
+       <div class="box box-3">
+         <div class="caix-1"></div>
+         <div class="caix-2"></div>
+         <div class="caix-3"></div>
+      </div>
        <div class="box box-4"></div>
      </div>
    </body>
