--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="../css/style-base.css">
+     <link rel="stylesheet" href="../css/exerc-flexbox.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -11,9 +12,8 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exercicio1.html">Exercício-1</a></li>
          </ul>
        </nav>
      </header>
-   </body>
-</html>
+
