--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -21,22 +21,36 @@
      <div class="container">
        <div class="box box-1"></div>
        <div class="box box-2">
-         <div class="box box-5"></div>
-         <div class="box box-6"></div>
+         <div class="box box-2a"></div>
+         <div class="box box-2b"></div>
        </div>
        <div class="box box-3">
-         <div class="box box-7"></div>
-         <div class="box box-8"></div>
-         <div class="box box-9"></div>
-         <div class="box box-10"></div>
+         <div class="box box-3a"></div>
+         <div class="box box-3b"></div>
+         <div class="box box-3c"></div>
+         <div class="box box-3d"></div>
        </div>
        <div class="box box-4">
-         <div class="box box-11"></div>
+         <div class="box box-4a"></div>
        </div>
+      </div>
+      <h1>Exercício 2</h1>
+      <div class="container">
+        <div class="box-b box-5">
+          <div class="box-b box-5a"></div>
+          <div class="box-b box-5b"></div>
+        </div>
+        <div class="box-b box-6">
+          <div class="box-b box-6a"></div>
+          <div class="box-b box-6b"></div>
+          <div class="box-b box-6c"></div>
+        </div>
+        <div class="box-b box-7">
+          <div class="box-b box-7a"></div>
+        </div>
 
-       <div class="box box-12">
 
-       </div>
+      </div>
      </div>
    </body>
 </html>
