--- a/exercicio1.html
+++ b/exercicio1.html
@@ -3,8 +3,8 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
-   <link rel="stylesheet" href="../css/style-base.css">
-   <link rel="stylesheet" href="../css/exerc-flexbox.css">
+   <link rel="stylesheet" href="./css/style-base.css">
+   <link rel="stylesheet" href="./css/exerc-flexbox.css">
    <title>EXERCÍCIOS-FLEXBOX</title>
  </head>
  <body>
