--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="../css/style-base.css">
-     <link rel="stylesheet" href="../css/exerc-flexbox.css">
+     <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="./css/exerc-flexbox.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
