--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
          <div class="box-new cai-2"></div>
        </div>
        <div class="box box-3">
-         <div class="caix-1"></div>
-         <div class="caix-2"></div>
-         <div class="caix-3"></div>
+         <div class="box-new caix-1"></div>
+         <div class="box-new caix-2"></div>
+         <div class="box-new caix-3"></div>
+         <div class="box-new caix-4"></div>
       </div>
        <div class="box box-4"></div>
      </div>
