Adicionada base das boxes 8 a 13.

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -48,8 +48,30 @@
         <div class="box-b box-7">
           <div class="box-b box-7a"></div>
         </div>
-
-
+      </div>
+      <h1>Exercício 3</h1>
+      <div class="container">
+        <div class="box-c box-8">
+            <div class="box-c box-8a"></div>
+            <div class="box-c box-8b"></div>
+        </div>
+        <div class="box-c box-9"></div>
+        <div class="box-c box-10">
+            <div class="box-c box-10a"></div>
+            <div class="box-c box-10ab"></div>
+            <div class="box-c box-10ac"></div>
+            <div class="box-c box-10ab"></div>
+            <div class="box-c box-10ac"></div>
+        </div>
+        <div class="box-c box-11"></div>
+        <div class="box-c box-12">
+            <div class="box-c box-12a"></div>
+            <div class="box-c box-12b"></div>
+            <div class="box-c box-12c"></div>
+            <div class="box-c box-12b"></div>
+            <div class="box-c box-12c"></div>
+        </div>
+        <div class="box-c box-13"></div>
       </div>
      </div>
    </body>
