adicionando mais uma div hihihihihi

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
          <div class="box-new caix-3"></div>
          <div class="box-new caix-4"></div>
       </div>
-       <div class="box box-4"></div>
+       <div class="box box-4">
+         <div class="box-new caixa-1"></div>
+       </div>
      </div>
    </body>
 </html>
