--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -58,10 +58,12 @@
         <div class="box-c box-9"></div>
         <div class="box-c box-10">
             <div class="box-c box-10a"></div>
-            <div class="box-c box-10ab"></div>
-            <div class="box-c box-10ac"></div>
-            <div class="box-c box-10ab"></div>
-            <div class="box-c box-10ac"></div>
+            <div class="box-c box-10-divisao">
+              <div class="box-c box-10b"></div>
+              <div class="box-c box-10c"></div>
+              <div class="box-c box-10d"></div>
+              <div class="box-c box-10e"></div>
+            </div>
         </div>
         <div class="box-c box-11"></div>
         <div class="box-c box-12">
