--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -13,7 +13,7 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício 1</a></li>
+           <li><a href="exer-01-flex.html">Exercícios 1, 2 e 3</a></li>
          </ul>
        </nav>
      </header>
@@ -67,11 +67,13 @@
         </div>
         <div class="box-c box-11"></div>
         <div class="box-c box-12">
-            <div class="box-c box-12a"></div>
+          <div class="box-c box-12a"></div>
+          <div class="box-c box-12-divisao">
             <div class="box-c box-12b"></div>
             <div class="box-c box-12c"></div>
             <div class="box-c box-12b"></div>
             <div class="box-c box-12c"></div>
+          </div>
         </div>
         <div class="box-c box-13"></div>
       </div>
