--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -19,8 +19,16 @@
    <h1>Exercício - 1</h1>
    <div class="container">
      <div class="box box-1"></div>
-	   <div class="box box-2"></div>
-	   <div class="box box-3"></div>
+	   <div class="box box-2">
+       <div class="box box-child-1"></div>
+       <div class="box box-child-2"></div>
+     </div>
+	   <div class="box box-3">
+        <div class="box box-child-3"></div>
+        <div class="box box-child-4"></div>
+        <div class="box box-child-5"></div>
+        <div class="box box-child-6"></div>
+     </div>
 	   <div class="box box-4"></div>
    </div>
  </body>
