--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -29,7 +29,9 @@
         <div class="box box-child-5"></div>
         <div class="box box-child-6"></div>
      </div>
-	   <div class="box box-4"></div>
+	   <div class="box box-4">
+       <div class="box box-child-7"></div>
+     </div>
    </div>
  </body>
 </html>
