--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -25,7 +25,10 @@
        <div class="box box-child-4">
          <div class="box box-child-5"></div>
          <div class="box box-child-6"></div>
-         <div class="box box-child-7"></div>   
+         <div class="box box-child-7"></div>
+       </div>
+       <div class="box box-child-8">
+         <div class="box box-child-9"></div>
        </div>
    </div>
  </body>
