--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
+     <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+     <link rel="stylesheet" href="./css/exerc-02.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -12,8 +13,16 @@
          <ul>
            <li><a href="index.html">Início</a></li>
            <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exer-02-flex.html">exercicio2</a></li>
          </ul>
        </nav>
      </header>
+     <h1>Exercicio 2</h1>
+      <div class="container2">
+        <div class="box13"></div>
+        <div class="box14"></div>
+
+
+      </div>
    </body>
 </html>
