--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -18,11 +18,13 @@
        </nav>
      </header>
      <h1>Exercicio 2</h1>
-      <div class="container2">
+      <div class="container">
         <div class="box13"></div>
         <div class="box14"></div>
-
-
+        <div class="box15"></div>
+        <div class="box16"></div>
+        <div class="box17"></div>
       </div>
+
    </body>
 </html>
