fiz de uma forma meio estranha mas terminei, ficou sem história mas a história foi boa.

--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -18,13 +18,18 @@
        </nav>
      </header>
      <h1>Exercicio 2</h1>
-      <div class="container">
-        <div class="box13"></div>
-        <div class="box14"></div>
-        <div class="box15"></div>
-        <div class="box16"></div>
-        <div class="box17"></div>
-      </div>
+     <div class="container2">
+       <div class="box13"></div>
+       <div class="box14"></div>
+     </div>
+     <div class="container3">
+       <div class="box15"></div>
+       <div class="box16"></div>
+       <div class="box17"></div>
+     </div>
+     <div class="container4">
+         <div class="box18"></div>
+     </div>
 
    </body>
 </html>
