começando o exercicio 3, que Deus esteja cmg

--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css" type="text/css">
-     <link rel="stylesheet" href="./css/exerc-02.css" type="text/css">
+     <link rel="stylesheet" href="./css/exerc-03.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -14,22 +14,21 @@
            <li><a href="index.html">Início</a></li>
            <li><a href="exer-01-flex.html">Exercício-1</a></li>
            <li><a href="exer-02-flex.html">exercicio2</a></li>
-           <li><a href="exer-03-flex.html">Exercício-3</a></li>
          </ul>
        </nav>
      </header>
      <h1>Exercicio 2</h1>
-     <div class="container2">
-       <div class="box13"></div>
-       <div class="box14"></div>
-     </div>
-     <div class="container3">
-       <div class="box15"></div>
-       <div class="box16"></div>
-       <div class="box17"></div>
-     </div>
-     <div class="container4">
-         <div class="box18"></div>
+     <div class="container">
+       <div class="box19">
+         <div class="box20"></div>
+         <div class="box21"></div>
+       </div>
+
+       <div class="box"></div>
+       <div class="box"></div>
+       <div class="box"></div>
+       <div class="box"></div>
+       <div class="box"></div>
      </div>
 
    </body>
