--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
      <div class="container">
        <div class="box box-1"></div>
        <div class="box box-2">
-         <div class="box-new cai-1"></div>
-         <div class="box-new cai-2"></div>
+         <div class="box cai-1"></div>
+         <div class="box cai-2"></div>
        </div>
        <div class="box box-3">
-         <div class="box-new caix-1"></div>
-         <div class="box-new caix-2"></div>
-         <div class="box-new caix-3"></div>
-         <div class="box-new caix-4"></div>
+         <div class="box caix-1"></div>
+         <div class="box caix-2"></div>
+         <div class="box caix-3"></div>
+         <div class="box caix-4"></div>
       </div>
        <div class="box box-4">
-         <div class="box-new caixa-1"></div>
+         <div class="box caixa-1"></div>
        </div>
      </div>
    </body>
