--- a/exercicio1.html
+++ b/exercicio1.html
@@ -4,17 +4,18 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <link rel="stylesheet" href="./css/style-base.css">
-   <link rel="stylesheet" href="./css/exerc-flexbox.css">
+   <link rel="stylesheet" href="./css/exerc1-flexbox.css">
    <title>EXERCÍCIOS-FLEXBOX</title>
- </head>
+ </head>  
  <body>
    <header>
      <nav>
        <ul>
          <li><a href="index.html">Início</a></li>
-         <li><a href="exer-01-flex.html">Exercício-1</a></li>
+         <li><a href="exercicio2.html">Exercício 2</a></li>
        </ul>
      </nav>
+     <h1 class="titulo" >Exercício - 1</h1>
    </header>
 
    <section class="container-pai">
