renomeando e iniciando exer-3

--- a/index-3.html
+++ b/index-3.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
-     <link rel="stylesheet" href="./css/exer-02-flex.css">
+     <link rel="stylesheet" href="./css/exer-03-flex.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
@@ -12,14 +12,14 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-02-flex.html">Exercício-2</a></li>
+           <li><a href="exer-02-flex.html">Exercício-3</a></li>
          </ul>
        </nav>
      </header>
-     <h1>Exercicio flex-box-2</h1>
+     <h1>Exercicio flex-box-3</h1>
      <div class="container">
 
-       <div class="box-2">
+       <div class="box box-2">
          <div class="box cai-1"></div>
          <div class="box cai-2"></div>
        </div>
