--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -6,34 +6,43 @@
      <link rel="stylesheet" href="./css/style-base.css" type="text/css">
      <link rel="stylesheet" href="./css/exerc-01.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
+
    </head>
+
    <body>
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
-           <li><a href="exer-02-flex.html">exercicio2</a></li>
+           <li class="bonito"><a href="index.html">Início</a></li>
+           <li class="bonito"><a href="exer-02-flex.html">Exercício-2</a></li>
+           <li class="bonito"><a href="exer-03-flex.html">Exercicio-3</a></li>
          </ul>
        </nav>
      </header>
+
      <h1>Exercicio 1</h1>
+
       <div class="container">
         <div class="box box-1"></div>
+
         <div class="box box-2">
           <div class="box-5"></div>
           <div class="box-6"></div>
         </div>
+
         <div class="box box-3">
           <div class="box-7"></div>
           <div class="box-8"></div>
           <div class="box-9"></div>
           <div class="box-10"></div>
         </div>
+
         <div class="box box-4">
           <div class="box-11"></div>
           <div class="box-12"></div>
         </div>
+
       </div>
+
    </body>
 </html>
