--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -7,27 +7,31 @@
      <link rel="stylesheet" href="./css/exerc-02.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
+
    <body>
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
-           <li><a href="exer-02-flex.html">exercicio2</a></li>
-           <li><a href="exer-03-flex.html">Exercício-3</a></li>
+           <li class="bonito"><a href="index.html">Início</a></li>
+           <li class="bonito"><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li class="bonito"><a href="exer-03-flex.html">Exercicio-3</a></li>
          </ul>
        </nav>
      </header>
+
      <h1>Exercicio 2</h1>
+
      <div class="container2">
        <div class="box13"></div>
        <div class="box14"></div>
      </div>
+
      <div class="container3">
        <div class="box15"></div>
        <div class="box16"></div>
        <div class="box17"></div>
      </div>
+
      <div class="container4">
          <div class="box18"></div>
      </div>
