--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -8,27 +8,56 @@
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
+
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
-           <li><a href="exer-02-flex.html">exercicio2</a></li>
+           <li class="bonito"><a href="index.html">Início</a></li>
+           <li class="bonito"><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li class="bonito"><a href="exer-02-flex.html">Exercicio-2</a></li>
          </ul>
        </nav>
      </header>
-     <h1>Exercicio 2</h1>
+
+     <h1>Exercicio 3</h1>
+
      <div class="container">
+
        <div class="box19">
          <div class="box20"></div>
          <div class="box21"></div>
        </div>
 
-       <div class="box"></div>
-       <div class="box"></div>
-       <div class="box"></div>
-       <div class="box"></div>
-       <div class="box"></div>
+       <div class="box22"></div>
+
+       <div class="box23">
+         <div class="box24"></div>
+         <div class="box200">
+           <div class="box25"></div>
+           <div class="box26"></div>
+         </div>
+         <div class="box300">
+           <div class="box27"></div>
+           <div class="box28"></div>
+         </div>
+       </div>
+
+       <div class="box29"></div>
+
+       <div class="box30">
+         <div class="box31"></div>
+         <div class="box400">
+           <div class="box32"></div>
+           <div class="box33"></div>
+         </div>
+         <div class="box500">
+           <div class="box34"></div>
+           <div class="box35"></div>
+         </div>
+       </div>
+
+       <div class="box36"></div>
+
      </div>
 
    </body>
