--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
   <!Doctype html>
   <html lang="pt-br" dir="ltr">
+
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
-   <body>
+
+   <body id="inicial">
+
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
-           <li><a href="exer-02-flex.html">Exercício-2</a></li>
-           <li><a href="exer-03-flex.html">Exercício-3</a></li>
+           <li class="bonito"><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li class="bonito"><a href="exer-02-flex.html">Exercício-2</a></li>
+           <li class="bonito"><a href="exer-03-flex.html">Exercicio-3</a></li>
          </ul>
        </nav>
      </header>
+
    </body>
 </html>
