--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -4,8 +4,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <link rel="stylesheet" href="./css/style-base.css" type="text/css">
-   <link rel="stylesheet" href="./css/exer-01-flex.css" type="text/css">
-   <title>EXERCÍCIO 1</title>
+   <link rel="stylesheet" href="./css/exer-02-flex.css" type="text/css">
+   <title>EXERCÍCIO 2</title>
  </head>
  <body>
 
@@ -21,22 +21,19 @@
    </header>
 
    <div class="container">
-     <div class="box box-1"></div>
-
-     <div class="box box-2">
-       <div class="box box-5"></div>
-       <div class="box box-6"></div>
+     <div class= "box box-1">
+       <div class= "box-1 box1">  </div>
+       <div class= "box-1 box2"> </div>
      </div>
 
-     <div class="box box-3">
-       <div class="box box-7"></div>
-       <div class="box box-7"></div>
-       <div class="box box-7"></div>
-       <div class="box box-7"></div>
+     <div class= "box box-2">
+       <div class= "box-2 box3-1">  </div>
+       <div class= "box-2 box3-2"> </div>
+       <div class= "box-2 box3-3"> </div>
      </div>
 
-     <div class="box box-4">
-       <div class="box box-8"></div>
+     <div class= "box box-3">
+       <div class= "box-3 box4"> </div>
      </div>
 
    </div>
