--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <link rel="stylesheet" href="./css/style-base.css" type="text/css">
    <link rel="stylesheet" href="./css/exer-03-flex.css" type="text/css">
-   <title>EXERCÍCIO 2</title>
+   <title>EXERCÍCIO 3</title>
  </head>
  <body>
 
@@ -28,7 +28,7 @@
      </div>
 
      <div class= "box box-2">
-       <div class= "box-2 box3">  </div>
+      <!-- <div class= "box-2 box3">  </div>-->
      </div>
 
      <div class= "box box-3">
@@ -40,19 +40,19 @@
      </div>
 
      <div class= "box box-4">
-       <div class= "box-4 box6">  </div>
+      <!-- <div class= "box-4 box6">  </div>-->
      </div>
 
      <div class= "box box-5">
-       <div class= "box-5 box7">  </div>
        <div class= "box-5 box8-1"> </div>
        <div class= "box-5 box8-2">  </div>
        <div class= "box-5 box8-3"> </div>
        <div class= "box-5 box8-4"> </div>
+        <div class= "box-5 box7">  </div>
      </div>
 
      <div class= "box box-6">
-       <div class= "box-6 box9">  </div>
+      <!-- <div class= "box-6 box9">  </div>-->
      </div>
 
    </div>
