Professor, subi tudo direto.
Acabei nem fazendo de pouquinho em pouquinho igual você tinha pedido

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -1,43 +1,49 @@
-
   <!Doctype html>
   <html lang="pt-br" dir="ltr">
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
-     <link rel="stylesheet" href="./css/exer-01-flex.css">
-     <link rel="stylesheet" href="./css/exer-02-flex.css">
+     <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+     <link rel="stylesheet" href="./css/exer-01-flex.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
+
    </head>
+
    <body>
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício 1</a></li>
+           <li class="tela1"><a href="index.html">Início</a></li>
+           <li class="tela1"><a href="exer-02-flex.html">Exercício-2</a></li>
+           <li class="tela1"><a href="exer-03-flex.html">Exercicio-3</a></li>
          </ul>
        </nav>
      </header>
-     <h1>Exercício 1</h1>
-     <div class="container">
-       <div class="box box-1"></div>
-       <div class="box box-2">
-         <div class="box box-5"></div>
-         <div class="box box-6"></div>
-       </div>
-       <div class="box box-3">
-         <div class="box box-7"></div>
-         <div class="box box-8"></div>
-         <div class="box box-9"></div>
-         <div class="box box-10"></div>
-       </div>
-       <div class="box box-4">
-         <div class="box box-11"></div>
-       </div>
 
-       <div class="box box-12">
+     <h1>Exercicio 1</h1>
 
-       </div>
-     </div>
+      <div class="container">        
+        <div class="box box1"></div><!--Box sozinha-->
+        <div class="box box2">
+          <div class="box5"></div><!--Grupo de duas box-->
+          <div class="box6"></div><!--Grupo de duas box-->
+        </div>
+        <!--Grupo de quatro box-->
+        <div class="box box3">
+          <div class="box7"></div>
+          <div class="box8"></div>
+          <div class="box9"></div>
+          <div class="box10"></div>
+        </div>
+        <!--Grupo de quatro box-->
+
+        <!--Box Sozinha-->
+        <div class="box box4">
+          <div class="box11"></div>
+          <div class="box12"></div>
+        </div>
+        <!--Box Sozinha-->
+      </div>
+      <!--Fecha Container-->
    </body>
 </html>
