--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -27,33 +27,37 @@
        <div class= "box-1 box2"> </div>
      </div>
 
-     <div class= "box box-2">
-      <!-- <div class= "box-2 box3">  </div>-->
-     </div>
+     <div class= "box box-2"></div>
 
      <div class= "box box-3">
-       <div class= "box-3 box4">  </div>
-       <div class= "box-3 box5-1"> </div>
-       <div class= "box-3 box5-2">  </div>
-       <div class= "box-3 box5-3"> </div>
-       <div class= "box-3 box5-4"> </div>
+       <div class= "box3"></div>
+         <div class="box4">
+           <div class="box5"></div>
+           <div class="box6"></div>
+         </div>
+
+         <div class="box7">
+           <div class="box8"></div>
+           <div class="box9"></div>
+       </div>
      </div>
 
-     <div class= "box box-4">
-      <!-- <div class= "box-4 box6">  </div>-->
+     <div class= "box box-4"></div>
+
+     <div class= "box box-3">
+       <div class= "box3"></div>
+         <div class="box4">
+           <div class="box5"></div>
+           <div class="box6"></div>
+         </div>
+
+         <div class="box7">
+           <div class="box8"></div>
+           <div class="box9"></div>
+       </div>
      </div>
 
-     <div class= "box box-5">
-       <div class= "box-5 box8-1"> </div>
-       <div class= "box-5 box8-2">  </div>
-       <div class= "box-5 box8-3"> </div>
-       <div class= "box-5 box8-4"> </div>
-        <div class= "box-5 box7">  </div>
-     </div>
-
-     <div class= "box box-6">
-      <!-- <div class= "box-6 box9">  </div>-->
-     </div>
+     <div class= "box box-6"></div>
 
    </div>
  </body>
