--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -1,87 +1,30 @@
+
 <!Doctype html>
 <html lang="pt-br" dir="ltr">
-
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style-base.css">
-    <link rel="stylesheet" href="css/exer-01-flex.css">
-    <title></title>
-  </head>
-  <body>
-    <header>
-      <h1>Exercício 1</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Início</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="box-master">
-      <div class="box-row box" id="box1"></div>
-      <div class="box-row">
-        <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div>
-      </div>
-      <div class="box-row">
-        <div class="box" id="box4"></div>
-        <div class="box" id="box5"></div>
-        <div class="box" id="box6"></div>
-        <div class="box" id="box7"></div>
-      </div>
-      <div class="box-row">
-        <div class="box" id="box8"></div>
-        <div class="box" id="box9"></div>
-        <div class="box" id="box10"></div>
-      </div>
-    </div>
-    <div class="box-master">
-      <div class="box-row">
-        <div class="box" id="box11"></div>
-        <div class="box" id="box12"></div>
-      </div>
-      <div class="box-row">
-        <div class="box" id="box13"></div>
-        <div class="box" id="box14"></div>
-        <div class="box" id="box15"></div>
-      </div>
-      <div class="box-row box" id="box16"></div>
-    </div>
-    <div class="box-master">
-      <div class="box-row">
-        <div class="box" id="box17"></div>
-        <div class="box" id="box18"></div>
-      </div>
-      <div class="box-row box" id="box19"></div>
-      <div class="box-row">
-        <div class="box" id="box20"></div>
-        <div class="box-grid" id="box21">
-          <div class="box-row-fill" id="fill-1">
-            <div class="box" id="box22"></div>
-            <div class="box" id="box23"></div>
-          </div>
-          <div class="box-row-fill" id="fill-2">
-            <div class="box" id="box24"></div>
-            <div class="box" id="box25"></div>
-          </div>
-        </div>
-      </div>
-      <div class="box-row box" id="box26"></div>
-      <div class="box-row">
-        <div class="box-grid" id="box27">
-          <div class="box-row-fill" id="fill-3">
-            <div class="box" id="box28"></div>
-            <div class="box" id="box29"></div>
-          </div>
-          <div class="box-row-fill" id="fill-4">
-            <div class="box" id="box30"></div>
-            <div class="box" id="box31"></div>
-          </div>
-        </div>
-        <div class="box" id="box32"></div>
-      </div>
-      <div class="box-row box" id="box33"></div>
-    </div>
-  </body>
-
+ <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+   <link rel="stylesheet" href="./css/style-base.css">
+   <link rel="stylesheet" href="./css/exer-01-flex.css">
+   <title>EXERCÍCIOS-FLEXBOX</title>
+ </head>
+ <body>
+     <header>
+       <nav>
+         <ul>
+           <li><a href="index.html">Início</a></li>
+         </ul>
+       </nav>
+       <h1>Exercício - 1</h1>
+     </header>
+     <div class='container'>
+       <div class="box box-1"></div>
+       <div class="box box-2">
+       </div>
+       <div class="box box-3">
+       </div>
+       <div class="box box-4">
+       </div>
+     </div>
+ </body>
 </html>
