Adicionando box filhos e atualzando o css

--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -20,10 +20,17 @@
      <div class='container'>
        <div class="box box-1"></div>
        <div class="box box-2">
+         <div class="box-filho1"></div>
+         <div class="box-filho2"></div>
        </div>
        <div class="box box-3">
+         <div class="box-filho3"></div>
+         <div class="box-filho3"></div>
+         <div class="box-filho3"></div>
+         <div class="box-filho3"></div>
        </div>
        <div class="box box-4">
+         <div class="box-filho4"></div>
        </div>
      </div>
  </body>
