--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -17,19 +17,17 @@
        <h1>Exercício - 2</h1>
      </header>
      <div class='container'>
-       <div class="box box-1"></div>
-       <div class="box box-2">
+       <div class="teste">
          <div class="box-filho1"></div>
          <div class="box-filho2"></div>
        </div>
-       <div class="box box-3">
+       <div class="teste-2">
          <div class="box-filho3"></div>
          <div class="box-filho3"></div>
-         <div class="box-filho3"></div>
-         <div class="box-filho3"></div>
+         <div class="box-filho4"></div>
        </div>
        <div class="box box-4">
-         <div class="box-filho4"></div>
+         <div class="box-filho5"></div>
        </div>
      </div>
  </body>
