Box do exer 2 finalizadas e CSS tbm

--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -17,18 +17,16 @@
        <h1>Exercício - 2</h1>
      </header>
      <div class='container'>
-       <div class="teste">
+       <div class="box1">
          <div class="box-filho1"></div>
          <div class="box-filho2"></div>
        </div>
-       <div class="teste-2">
+       <div class="box2">
          <div class="box-filho3"></div>
          <div class="box-filho3"></div>
          <div class="box-filho4"></div>
        </div>
-       <div class="box box-4">
-         <div class="box-filho5"></div>
-       </div>
+       <div class="box3"></div>
      </div>
  </body>
 </html>
