--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -23,19 +23,30 @@
        </div>
        <div class="box box-2"></div>
        <div class= "box box-3">
-       <div class= "box3"></div>
-         <div class="box4">
-           <div class="box5"></div>
-           <div class="box6"></div>
+       <div class= "box-filho3"></div>
+         <div class="box-filho4">
+           <div class="box-filho5"></div>
+           <div class="box-filho6"></div>
          </div>
-         <div class="box7">
-           <div class="box8"></div>
-           <div class="box9"></div>
+         <div class="box-filho7">
+           <div class="box-filho8"></div>
+           <div class="box-filho9"></div>
        </div>
      </div>
        <div class="box box-2"></div>
+       <div class= "box box-3">
+         <div class="box-filho4">
+            <div class="box-filho5"></div>
+            <div class="box-filho6"></div>
+          </div>
+
+          <div class="box-filho7">
+            <div class="box-filho8"></div>
+            <div class="box-filho9"></div>
+          </div>
+         <div class= "box-filho3"></div>
+        </div>
        <div class="box box-5"></div>
-       <div class="box box-6"></div>
      </div>
  </body>
 </html>
