--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
        <nav>
          <ul>
            <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercício-1</a></li>
+           <li><a href="exer-01.html">Exercício-1</a></li>
+           <li><a href="exer-02.html">Exercício-2</a></li>
+           <li><a href="exer-03.html">Exercício-3</a></li>
          </ul>
        </nav>
      </header>
