--- a/exer-01-flex.html
+++ b/exer-01-flex.html
@@ -1,84 +1,43 @@
-
   <!Doctype html>
   <html lang="pt-br" dir="ltr">
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
-     <link rel="stylesheet" href="./css/style-base.css">
-     <link rel="stylesheet" href="./css/exer-01-flex.css">
-     <link rel="stylesheet" href="./css/exer-02-flex.css">
+     <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+     <link rel="stylesheet" href="./css/exer-01-flex.css" type="text/css">
      <title>EXERCÍCIOS-FLEXBOX</title>
+
    </head>
+
    <body>
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercícios 1, 2 e 3</a></li>
+           <li class="tela1"><a href="index.html">Início</a></li>
+           <li class="tela1"><a href="exer-02-flex.html">Exercício-2</a></li>
+           <li class="tela1"><a href="exer-03-flex.html">Exercicio-3</a></li>
          </ul>
        </nav>
      </header>
-     <h1>Exercício 1</h1>
-     <div class="container">
-       <div class="box box-1"></div>
-       <div class="box box-2">
-         <div class="box box-2a"></div>
-         <div class="box box-2b"></div>
-       </div>
-       <div class="box box-3">
-         <div class="box box-3a"></div>
-         <div class="box box-3b"></div>
-         <div class="box box-3c"></div>
-         <div class="box box-3d"></div>
-       </div>
-       <div class="box box-4">
-         <div class="box box-4a"></div>
-       </div>
-      </div>
-      <h1>Exercício 2</h1>
-      <div class="container">
-        <div class="box-b box-5">
-          <div class="box-b box-5a"></div>
-          <div class="box-b box-5b"></div>
-        </div>
-        <div class="box-b box-6">
-          <div class="box-b box-6a"></div>
-          <div class="box-b box-6b"></div>
-          <div class="box-b box-6c"></div>
-        </div>
-        <div class="box-b box-7">
-          <div class="box-b box-7a"></div>
-        </div>
-      </div>
-      <h1>Exercício 3</h1>
-      <div class="container">
-        <div class="box-c box-8">
-            <div class="box-c box-8a"></div>
-            <div class="box-c box-8b"></div>
-        </div>
-        <div class="box-c box-9"></div>
-        <div class="box-c box-10">
-            <div class="box-c box-10a"></div>
-            <div class="box-c box-10-divisao">
-              <div class="box-c box-10b"></div>
-              <div class="box-c box-10c"></div>
-              <div class="box-c box-10d"></div>
-              <div class="box-c box-10e"></div>
-            </div>
-        </div>
-        <div class="box-c box-11"></div>
-        <div class="box-c box-12">
-          <div class="box-c box-12a"></div>
-          <div class="box-c box-12-divisao">
-            <div class="box-c box-12b"></div>
-            <div class="box-c box-12c"></div>
-            <div class="box-c box-12b"></div>
-            <div class="box-c box-12c"></div>
-          </div>
-        </div>
-        <div class="box-c box-13"></div>
-      </div>
-     </div>
-   </body>
 
+     <h1>Exercicio 1</h1>
+
+      <div class="container">
+        <div class="box box1"></div>
+        <div class="box box2">
+          <div class="box5"></div>
+          <div class="box6"></div>
+        </div>
+        <div class="box box3">
+          <div class="box7"></div>
+          <div class="box8"></div>
+          <div class="box9"></div>
+          <div class="box10"></div>
+        </div>
+        <div class="box box4">
+          <div class="box11"></div>
+          <div class="box12"></div>
+        </div>
+      </div>
+   </body>
 </html>
