--- a/exer-03-flex.html
+++ b/exer-03-flex.html
@@ -1,71 +1,56 @@
 <!Doctype html>
 <html lang="pt-br" dir="ltr">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width,initial-scale=1">
-   <link rel="stylesheet" href="./css/style-base.css">
-   <link rel="stylesheet" href="./css/exer-03-flex.css">
-   <title>EXERCÍCIOS-FLEXBOX</title>
- </head>
- <body>
-   <header>
-     <nav>
-       <ul>
-         <li><a href="index.html">Início</a></li>
-         <li><a href="exer-01-flex.html">Exercício-1</a></li>
-         <li><a href="exer-02-flex.html">Exercício-2</a></li>
-         <li><a href="exer-03-flex.html">Exercício-3</a></li>
-       </ul>
-     </nav>
-     </header>
-
-
-     <h1> Exercício 03 </h1>
-
-    <div class = "container">
-
-      <div class = "box box-1">
-        <div class = "box box-filho1"> </div>
-        <div class = "box box-filho12"> </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+    <link rel="stylesheet" href="./css/exer-03-flex.css" type="text/css">
+    <title>EXERCÍCIOS-FLEXBOX</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li class="tela1"><a href="index.html">Início</a></li>
+          <li class="tela1"><a href="exer-01-flex.html">Exercício-1</a></li>
+          <li class="tela1"><a href="exer-02-flex.html">Exercicio-2</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h1>Exercicio 3</h1>
+    <div class="container">
+      <div class="box1">
+        <div class="box2"></div>
+        <div class="box3"></div>
       </div>
 
-      <div class = "box box-2">
-      </div>
+      <div class="box4"></div>
 
-      <div class = "box box-3">
-        <div class = "box box-filho3"> </div>
-
-        <div class = "box box-filho31">
-          <div class = "box box-filho32"></div>
-          <div class = "box box-filho33"></div>
+      <div class="box5">
+        <div class="box6"></div>
+        <div class="box7">
+          <div class="box8"></div>
+          <div class="box9"></div>
         </div>
-
-        <div class = "box box-filho34">
-          <div class="box box-filho35"> </div>
-          <div class="box box-filho36"> </div>
+        <div class="box10">
+          <div class="box11"></div>
+          <div class="box12"></div>
         </div>
-
       </div>
 
-      <div class = "box box-4">
-      </div>
+      <div class="box13"></div>
 
-      <div class = "box box-5">
-        <div class = "box box-filho51">
-          <div class = "box box-filho52"> </div>
-          <div class = "box box-filho53"> </div>
+      <div class="box14">
+        <div class="box15"></div>
+        <div class="box16">
+          <div class="box17"></div>
+          <div class="box18"></div>
+        <div class="box19">
+          <div class="box20"></div>
+          <div class="box21"></div>
         </div>
-
-        <div class = "box box-filho54">
-          <div class = "box box-filho55"> </div>
-          <div class = "box box-filho56"> </div>
-        </div>
-
-        <div class = "box box-filho57"> </div>
       </div>
-
-      <div class = "box box-filho6"> </div>
-
+      <div class="box22"></div>
     </div>
-   </body>
+  </body>
 </html>
