--- a/exer-02-flex.html
+++ b/exer-02-flex.html
@@ -1,46 +1,36 @@
 <!Doctype html>
 <html lang="pt-br" dir="ltr">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width,initial-scale=1">
-   <link rel="stylesheet" href="./css/style-base.css">
-   <link rel="stylesheet" href="./css/exer-02-flex.css">
-   <title>EXERCÍCIOS-FLEXBOX</title>
- </head>
- <body>
-   <header>
-     <nav>
-       <ul>
-         <li><a href="index.html">Início</a></li>
-         <li><a href="exer-01-flex.html">Exercício-1</a></li>
-         <li><a href="exer-02-flex.html">Exercício-2</a></li>
-         <li><a href="exer-03-flex.html">Exercício-3</a></li>
-       </ul>
-     </nav>
-     </header>
 
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="./css/style-base.css" type="text/css">
+    <link rel="stylesheet" href="./css/exer-02-flex.css" type="text/css">
+    <title>EXERCÍCIOS-FLEXBOX</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li class="tela1"><a href="index.html">Início</a></li>
+          <li class="tela1"><a href="exer-01-flex.html">Exercício-1</a></li>
+          <li class="tela1"><a href="exer-03-flex.html">Exercicio-3</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h1>Exercicio 2</h1>
 
-     <h1> Exercício 02 </h1>
-
-     <div class = "container">
-
-       <div class = "box box-1">
-         <div class = "box-1 box-filho1">  </div>
-         <div class = "box-1 box-filho12"> </div>
-       </div>
-
-       <div class = "box box-2">
-         <div class = "box-2 box-filho2">  </div>
-         <div class = "box-2 box-filho21"> </div>
-         <div class = "box-2 box-filho22"> </div>
-       </div>
-
-       <div class = "box box-3">
-
-         <div class = "box box-filho3"> </div>
-
-       </div>
-
-      </div>
+    <div class="container2">
+      <div class="box1"></div>
+      <div class="box2"></div>
+    </div>
+    <div class="container3">
+      <div class="box3"></div>
+      <div class="box4"></div>
+      <div class="box5"></div>
+    </div>
+    <div class="container4">
+      <div class="box6"></div>
+    </div>
   </body>
 </html>
