--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
   <!Doctype html>
   <html lang="pt-br" dir="ltr">
+
    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="./css/style-base.css">
-     <link rel="stylesheet" href="./css/exer-01-flex.css">
-     <link rel="stylesheet" href="./css/exer-02-flex.css">
      <title>EXERCÍCIOS-FLEXBOX</title>
    </head>
    <body>
      <header>
-       <h1>Exercícios Flex-box</h1>
        <nav>
          <ul>
-           <li><a href="index.html">Início</a></li>
-           <li><a href="exer-01-flex.html">Exercícios 1, 2 e 3</a></li>
+           <li class="tela1"><a href="exer-01-flex.html">Exercício 01</a></li>
+           <li class="tela1"><a href="exer-02-flex.html">Exercício 02</a></li>
+           <li class="tela1"><a href="exer-03-flex.html">Exercicio 03</a></li>
          </ul>
        </nav>
      </header>
-     <footer>
-       <h4>By: Gabriel Henrique</h3>
-     </footer>
+
    </body>
 </html>
